# libservicelog

./: .gitignore  .travis.yml  AUTHORS  COPYING  ChangeLog  Makefile.am  README  bootstrap.sh  configure.ac  libservicelog.spec.in
libservicelog-ci/: Dockerfile-fedora-33  Dockerfile-fedora-rawhide  Dockerfile-ubuntu-20.04  build-fedora-33.sh  build-ubuntu-20.04.sh
servicelog-1/: libservicelog.h  servicelog.h
src/: Makefile.am  addl_data.c  config.h.in  event.c  notify.c  repair_action.c  servicelog-1.pc.in  servicelog.c  slog_internal.h  v29_compat.c  v29_notify_gram.c  v29_notify_gram.h  v29_notify_gram.y  v29_notify_lex.c  v29_notify_lex.l  v29_print.c
src/tests/: run_tests  test_libservicelog.c
src/tests/tests/: test-001-log_basic_event  test-002-log_os_event  test-003-log_rtas_event  test-004-log_encl_event  test-005-log_bmc_event  test-006-truncate_event
src/tests/tests-results/: test-001-log_basic_event.result.out  test-002-log_os_event.result.out  test-003-log_rtas_event.result.out  test-004-log_encl_event.result.out  test-005-log_bmc_event.result.out  test-006-truncate_event.result.out
